--- a/app/panelWyswietlAutobus.html
+++ b/app/panelWyswietlAutobus.html
@@ -30,7 +30,7 @@
     </div>
     <div class="panelWyswietlAutobus__subtitle">Edycja autobusu</div>
     <div class="panelWyswietlAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <form name="BusForm" ng-controller="UpdateBusController" ng-submit="updateBus()" novalidate="novalidate">
+    <form name="BusForm" ng-controller="UpdateBusController" novalidate="novalidate">
       <div class="panelWyswietlAutobus__content__form">
         <div class="panelWyswietlAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
           <input placeholder="Numer Rejestracyjny" ng-model="busToUpdate[0].RegistrationNumber"/>
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="panelWyswietlAutobus__navigation">
-        <button class="green panelWyswietlAutobus__navigation__item green">Aktualizuj Autobus</button><a href="/#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0" class="panelWyswietlAutobus__navigation__item red">Dezaktywuj</a><a href="/#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0" class="panelWyswietlAutobus__navigation__item greenDark">Aktywuj</a><a href="/#/bus" class="panelWyswietlAutobus__navigation__item gray -abort">Anuluj</a>
+        <button ng-click="updateBus()" class="green panelWyswietlAutobus__navigation__item green">Aktualizuj Autobus</button><a href="/#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0" class="panelWyswietlAutobus__navigation__item red">Dezaktywuj</a><a href="/#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0" class="panelWyswietlAutobus__navigation__item greenDark">Aktywuj</a><a href="/#/bus" class="panelWyswietlAutobus__navigation__item gray -abort">Anuluj</a>
       </div>
     </form>
   </div>
