Wstępna walidacja formularzy

--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -24,7 +24,7 @@
           <div ng-show="form.$submitted || form.uTypPrzystanku.$touched" class="row"><span ng-show="form.uTypPrzystanku.$error.required" class="error-info">Wybierz typ przystanku!</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lat</span>
-          <input placeholder="Lat" ng-model="busstopToCreate[0].Lat" required="required" name="uLat" pattern="-?d{1,3}.d+"/>
+          <input placeholder="Lat" ng-model="busstopToCreate[0].Lat" required="required" name="uLat"/>
           <div ng-show="form.$submitted || form.uLat.$touched" class="row"><span ng-show="form.uLat.$error.required" class="error-info">Podaj współrzędne!</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lng</span>
