--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -8,15 +8,15 @@
     <form name="form" ng-controller="AddBusstopController" ng-submit="form.$valid &amp;&amp; createBusstop()" novalidate="novalidate">
       <div ng-hide="sendForm" class="panelDodajPrzystanek__content__form">
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Nazwa Przystanku</span>
-          <input placeholder="Nazwa Przystanku" ng-model="busstopToCreate[0].Name" required="required" name="uNazwa"/>
+          <input placeholder="Nazwa Przystanku" ng-model="Name" required="required" name="uNazwa"/>
           <div ng-show="form.$submitted || form.uNazwa.$touched" class="row"><span ng-show="form.uNazwa.$error.required" class="error-info">Proszę podać nazwe przystanku</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Ulica</span>
-          <input placeholder="Ulica" ng-model="busstopToCreate[0].LocalizationString" required="required" name="uUlica"/>
+          <input placeholder="Ulica" ng-model="LocalizationString" required="required" name="uUlica"/>
           <div ng-show="form.$submitted || form.uUlica.$touched" class="row"><span ng-show="form.uUlica.$error.required" class="error-info">Proszę podać nazwe ulicy</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Typ Przystanku</span>
-          <select ng-model="busstopToCreate[0].BusStopType" required="required" name="uTypPrzystanku">
+          <select ng-model="BusStopType" required="required" name="uTypPrzystanku">
             <option value="" ng-selected="selected">Wybierz typ przystanku!</option>
             <option value="0">Normalny</option>
             <option value="1">Zabudowany</option>
@@ -24,15 +24,15 @@
           <div ng-show="form.$submitted || form.uTypPrzystanku.$touched" class="row"><span ng-show="form.uTypPrzystanku.$error.required" class="error-info">Prosze wybrać odpowiedni typ przystanku</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lat</span>
-          <input placeholder="Lat" ng-model="busstopToCreate[0].Lat" required="required" name="uLat"/>
+          <input placeholder="Lat" ng-model="Lat" required="required" name="uLat"/>
           <div ng-show="form.$submitted || form.uLat.$touched" class="row"><span ng-show="form.uLat.$error.required" class="error-info">Prosze podać współrzędne!</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lng</span>
-          <input placeholder="Lng" type="number" ng-model="busstopToCreate[0].Lng" required="required" name="uLng"/>
+          <input placeholder="Lng" type="number" ng-model="Lng" required="required" name="uLng"/>
           <div ng-show="form.$submitted || form.uLng.$touched" class="row"><span ng-show="form.uLng.$error.required" class="error-info">Prosze podać współrzędne!</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
-          <select ng-model="busstopToCreate[0].GotMachine" required="required" name="uBiletomat">
+          <select ng-model="GotMachine" required="required" name="uBiletomat">
             <option value="" ng-selected="selected">Wybierz</option>
             <option value="0">Nie</option>
             <option value="1">Tak</option>
@@ -40,7 +40,7 @@
           <div ng-show="form.$submitted || form.uBiletomat.$touched" class="row"><span ng-show="form.uBiletomat.$error.required" class="error-info">Proszę wybrać odpowiednią opcje</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma kiosk?</span>
-          <select ng-model="busstopToCreate[0].GotKiosk" required="required" name="uKiosk">
+          <select ng-model="GotKiosk" required="required" name="uKiosk">
             <option value="" ng-selected="selected">Wybierz</option>
             <option value="0">Nie</option>
             <option value="1">Tak</option>
