--- a/app/panelUsers.html
+++ b/app/panelUsers.html
@@ -1,5 +1,5 @@
 
-<e class="panelUsers">
+<div class="panelUsers">
   <div class="panelUsers__title">Zarządzanie Użytkownikami</div>
   <div class="panelUsers__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/user">Zarządzanie Użytkownikami</a></span></div>
   <div class="panelUsers__wrapper">
@@ -70,4 +70,4 @@
       </table>
     </div>
   </div>
-</e>
+</div>
