update bus, busstop  fix

--- a/app/panelWyswietlPrzystanek.html
+++ b/app/panelWyswietlPrzystanek.html
@@ -81,7 +81,7 @@
           </svg>
         </div>
         <div class="panelDodajAutobus__dataLoader__text">
-          <p ng-hide="CallbackServera">{{ message }}</p><a href="/#/bus" ng-show="CallbackServeraPositive" class="panelDodajAutobus__navigation__item green">Przystanek został zaktualizowany pomyślnie!</a><a href="/#/bus/" ng-show="CallbackServeraNegative" class="panelDodajAutobus__navigation__item red">Coś poszło nie tak...</a>
+          <p ng-hide="CallbackServera">{{ message }}</p><a href="/#/busstop" ng-show="CallbackServeraPositive" class="panelDodajAutobus__navigation__item green">Przystanek został zaktualizowany pomyślnie!</a><a href="/#/busstop/" ng-show="CallbackServeraNegative" class="panelDodajAutobus__navigation__item red">Coś poszło nie tak...</a>
         </div>
       </div>
     </form>
