Wstępna Rejestracja i Logowanie bez sesji i cookies

--- a/app/panelLogin.html
+++ b/app/panelLogin.html
@@ -19,7 +19,7 @@
         <input type="checkbox" checked="checked" id="check" class="check"/>
         <label for="check"><span class="icon"></span> Zapamiętaj mnie</label>
       </div>
-      <button type="submit">Zaloguj się</button>
+      <button>Zaloguj się</button>
     </form>
     <div class="panelLogin__navigation">Nie masz konta?<a href="/#/register" class="panelLogin__ToRegister">Zarejestruj się.</a></div>
     <div class="panelLogin__navigation">Nie pamietasz hasła?<a href="/#/forgot" class="panelLogin__ToRegister">Odzyskaj hasło.</a></div>
