--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
 <script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
 <script src="bower_components/select2/dist/js/select2.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js"></script>
 <!-- endbower -->
     <script src="scripts/vendor.min.js"></script>
     <script src="http://maps.google.com/maps/api/js"></script>
@@ -35,6 +37,7 @@
     <!--script(src="//code.jquery.com/ui/1.11.4/jquery-ui.js")-->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
+    <link rel="stylesheet" href="bower_components/angular-responsive-tables/release/angular-responsive-tables.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css">
