Wstępna Rejestracja i Logowanie bez sesji i cookies

--- a/app/panelAutobusy.html
+++ b/app/panelAutobusy.html
@@ -1,11 +1,9 @@
 
 <div class="panelAutobusy">
   <div class="panelAutobusy__title">Zarządzanie Autobusami</div>
-  <div class="panelAutobusy__fastTravel"><span><a href="/#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/bus">Zarządzanie Autobusami</a></span></div>
+  <div class="panelAutobusy__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="#/bus">Zarządzanie Autobusami</a></span></div>
   <div class="panelAutobusy__wrapper">
-    <div class="panelAutobusy__subtitle">Flota Autobusów</div>
-    <div class="panelAutobusy__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <div ng-hide="sendForm" class="panelAutobusy__navigation"><a href="/#/bus/add" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div>
+    <div ng-hide="sendForm" class="panelAutobusy__navigation"><a href="#/bus/add" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div>
     <div ng-hide="sendForm" class="panelAutobusy__filtrs">
       <div class="panelAutobusy__filtr">
         <label>Numer Rejestracyjny</label>
@@ -41,6 +39,7 @@
         </select>
       </div>
     </div>
+    <div ng-hide="sendForm" class="panelAutobusy__subtitle">Aktualna flota autobusów</div>
     <div ng-hide="sendForm" class="panelAutobusy__table">
       <table wt-responsive-table="wt-responsive-table" ng-controller="BusController" class="responsive">
         <thead>
@@ -60,7 +59,7 @@
             <td>{{ autobus.BusTypeName }}</td>
             <td>{{ autobus.BusStatusName }}</td>
             <td>{{ autobus.GotMachineName }}</td>
-            <td><a href="/#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/bus/delete/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
+            <td><a href="#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="#/bus/delete/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
           </tr>
           <tr ng-hide="filtrowaneAutobusy.length">
             <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
@@ -68,8 +67,7 @@
         </tbody>
       </table>
     </div>
-    <div ng-hide="sendForm" class="panelAutobusy__subtitle">Nieaktywne Autobusy</div>
-    <div ng-hide="sendForm" class="panelAutobusy__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
+    <div ng-hide="sendForm" class="panelAutobusy__subtitle">Autobusy nie wprowadzone do służby</div>
     <div ng-hide="sendForm" class="panelAutobusy__table">
       <table wt-responsive-table="wt-responsive-table" ng-controller="BusController" class="responsive">
         <thead>
@@ -89,7 +87,7 @@
             <td>{{ autobus.BusTypeName }}</td>
             <td>{{ autobus.BusStatusName }}</td>
             <td>{{ autobus.GotMachineName }}</td>
-            <td><a href="/#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/bus/restore/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green"></i></a></td>
+            <td><a href="#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="#/bus/restore/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green"></i></a></td>
           </tr>
           <tr ng-hide="filtrowaneAutobusyNieaktywne.length">
             <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
@@ -106,8 +104,8 @@
         </svg>
       </div>
       <div class="panelAutobusy__dataLoader__text">
-        <p ng-hide="CallbackServera">{{ message }}</p><a href="/#/bus" ng-show="CallbackServeraPositive" class="panelPrzystanki__text success">
-          <div class="panelAutobusy success__text__icon"><i class="fa fa-smile-o"></i></div>{{komunikat}}</a><a href="/#/bus" ng-show="CallbackServeraNegative" class="panelPrzystanki__text error">
+        <p ng-hide="CallbackServera">{{ message }}</p><a href="#/bus" ng-show="CallbackServeraPositive" class="panelPrzystanki__text success">
+          <div class="panelAutobusy success__text__icon"><i class="fa fa-smile-o"></i></div>{{komunikat}}</a><a href="#/bus" ng-show="CallbackServeraNegative" class="panelPrzystanki__text error">
           <div class="panelAutobusy success__text__icon"><i class="fa fa-frown-o"></i></div>Coś poszło nie tak...</a>
       </div>
     </div>
