--- a/app/index.html
+++ b/app/index.html
@@ -44,20 +44,20 @@
     <div class="headerholder">
       <!--Created by salimike on 18.03.16.
       -->
-      <div class="header">
+      <div ng-hide="globals.HeaderToHide" class="header">
         <div class="header__corner"><i class="fa fa-bus"></i></div>
         <div class="header__switcher -hidden">
           <div class="background"></div>
           <ul class="header__panel">
-            <li class="header__item"><a href="/#/bus"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="#/bus"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
-            <li class="header__item"><a href="/#/busstop"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="#/busstop"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
-            <li class="header__item"><a href="/#/roads"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="#/roads"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
-            <li class="header__item"><a href="/#/user"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
-            <li class="header__item"><a href="/#/controls"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="#/controls"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></a></li>
           </ul>
         </div>
@@ -74,11 +74,11 @@
                     <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
             <li class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
-            <li class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
             <li class="headerProfile__item"><a href="/#/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></a></li>
-            <li class="headerProfile__item"><a href="/#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/logout"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
           </ul>
         </div>
