--- a/app/panelLogin.html
+++ b/app/panelLogin.html
@@ -1,5 +1,5 @@
 
-<div class="panelLogin panel">
+<div class="panelLogin">
   <div class="panelLogin__wrapper">
     <div class="panelLogin__title">Panel Logowania</div>
     <div class="panelLogin__alert -info hidden">
@@ -10,18 +10,20 @@
     </div>
     <form name="form" ng-controller="LoginController" ng-submit="form.$valid &amp;&amp; Login()" novalidate="novalidate" class="panelLogin__form">
       <div class="panelLogin__formwrapper">
-        <input placeholder="E-mail" ng-model="Email" required="required" name="uEmail"/><i class="fa fa-envelope-o"></i>
+        <input placeholder="E-mail" ng-model="Email" required="required" name="Email" type="email"/><i class="fa fa-envelope-o"></i>
       </div>
+      <div ng-show="form.$submitted || form.Email.$touched" class="row"><span ng-show="form.Email.$error.required" class="error-info">Proszę podać email.</span></div>
       <div class="panelLogin__formwrapper">
-        <input placeholder="Hasło" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
+        <input placeholder="Hasło" ng-model="Password" required="required" name="Password" type="password"/><i class="fa fa-lock"></i>
       </div>
+      <div ng-show="form.$submitted || form.Password.$touched" class="row"><span ng-show="form.Password.$error.required" class="error-info">Proszę podać hasło.</span></div>
       <div class="remembermebox">
         <input type="checkbox" checked="checked" id="check" class="check"/>
         <label for="check"><span class="icon"></span> Zapamiętaj mnie</label>
       </div>
       <button>Zaloguj się</button>
+      <div class="panelLogin__navigation">Nie masz konta?<a href="/#/register" class="panelLogin__ToRegister">Zarejestruj się.</a></div>
+      <div class="panelLogin__navigation">Nie pamietasz hasła?<a href="/#/forgot" class="panelLogin__ToRegister">Odzyskaj hasło.</a></div>
     </form>
-    <div class="panelLogin__navigation">Nie masz konta?<a href="/#/register" class="panelLogin__ToRegister">Zarejestruj się.</a></div>
-    <div class="panelLogin__navigation">Nie pamietasz hasła?<a href="/#/forgot" class="panelLogin__ToRegister">Odzyskaj hasło.</a></div>
   </div>
 </div>
