--- a/app/panelRegister.html
+++ b/app/panelRegister.html
@@ -8,13 +8,16 @@
           <div class="panelRegister__formwrapper">
             <input placeholder="E-mail" ng-model="Email" required="required" name="uEmail" type="email"/><i class="fa fa-envelope-o"></i>
           </div>
+          <div ng-show="form.$submitted || form.uEmail.$touched" class="row"><span ng-show="form.uEmail.$error.required" class="error-info">Proszę podać email.</span></div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="Hasło" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
+            <input placeholder="Hasło" ng-model="Password" required="required" name="Password" type="password"/><i class="fa fa-lock"></i>
           </div>
+          <div ng-show="form.$submitted || form.Password.$touched" class="row"><span ng-show="form.Password.$error.required" class="error-info">Proszę podać hasło.</span></div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="Powtórz hasło" ng-model="PasswordAgain" required="required" name="uPasswordAgain" type="password"/><i class="fa fa-lock"></i>
-          </div>
-          <button>Zarajestuj</button>
+            <input placeholder="Powtórz hasło" ng-model="PasswordAgain" required="required" name="PasswordAgain" type="password" compare-to="Password"/>
+          </div><span ng-show="form.PasswordAgain.$error.compareTo &amp;&amp; form.PasswordAgain.$touched" class="error-info">Hasła nie są takie same</span>
+          <div ng-show="form.$submitted || form.PasswordAgain.$touched" class="row"><span ng-show="form.PasswordAgain.$error.required" class="error-info">Proszę podać ponownie hasło</span></div>
+          <button>Zarejestuj</button>
         </div>
         <div ng-hide="sendForm" class="panelRegister__navigation">Masz już konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj się.</a></div>
         <div ng-show="sendForm" class="panelDodajAutobus__dataLoader">
@@ -28,7 +31,7 @@
         </div>
         <div class="panelDodajAutobus__dataLoader__text">
           <p ng-hide="CallbackServera">{{ message }}</p>
-          <p ng-show="messageToken">{{ messageToken }}</p><a href="/#/register" ng-show="messageTokenError" class="panelDodajAutobus__navigation__item red">{{ messageTokenError }}</a>
+          <p ng-show="messageToken">{{ messageToken }}</p><a href="#/register" ng-show="messageTokenError" class="panelDodajAutobus__navigation__item red">{{ messageTokenError }}</a>
         </div>
       </form>
     </div>
