--- a/app/panelRegister.html
+++ b/app/panelRegister.html
@@ -8,18 +8,15 @@
           <div class="panelRegister__formwrapper">
             <input placeholder="E-mail" ng-model="Email" required="required" name="uEmail" type="email"/><i class="fa fa-envelope-o"></i>
           </div>
-          <div ng-show="form.$submitted || form.uEmail.$touched" class="row"><span ng-show="form.uEmail.$error.required" class="error-info">Proszę podać email.</span></div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="Hasło" ng-model="Password" required="required" name="Password" type="password"/><i class="fa fa-lock"></i>
+            <input placeholder="HasÅ‚o" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
           </div>
-          <div ng-show="form.$submitted || form.Password.$touched" class="row"><span ng-show="form.Password.$error.required" class="error-info">Proszę podać hasło.</span></div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="Powtórz hasło" ng-model="PasswordAgain" required="required" name="PasswordAgain" type="password" compare-to="Password"/>
-          </div><span ng-show="form.PasswordAgain.$error.compareTo &amp;&amp; form.PasswordAgain.$touched" class="error-info">Hasła nie są takie same</span>
-          <div ng-show="form.$submitted || form.PasswordAgain.$touched" class="row"><span ng-show="form.PasswordAgain.$error.required" class="error-info">Proszę podać ponownie hasło</span></div>
-          <button>Zarejestuj</button>
+            <input placeholder="PowtÃ³rz hasÅ‚o" ng-model="PasswordAgain" required="required" name="uPasswordAgain" type="password"/><i class="fa fa-lock"></i>
+          </div>
+          <button>Zarajestuj</button>
         </div>
-        <div ng-hide="sendForm" class="panelRegister__navigation">Masz już konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj się.</a></div>
+        <div ng-hide="sendForm" class="panelRegister__navigation">Masz juÅ¼ konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj siÄ™.</a></div>
         <div ng-show="sendForm" class="panelDodajAutobus__dataLoader">
           <div ng-hide="CallbackServera" class="panelDodajAutobus__dataLoader__svg">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 80 80" xml:space="preserve">
@@ -31,14 +28,38 @@
         </div>
         <div class="panelDodajAutobus__dataLoader__text">
           <p ng-hide="CallbackServera">{{ message }}</p>
-          <p ng-show="messageToken">{{ messageToken }}</p><a href="#/register" ng-show="messageTokenError" class="panelDodajAutobus__navigation__item red">{{ messageTokenError }}</a>
+          <p ng-show="messageToken">{{ messageToken }}</p><a href="/#/register" ng-show="messageTokenError" class="panelDodajAutobus__navigation__item red">{{ messageTokenError }}</a>
         </div>
       </form>
     </div>
     <div ng-show="RegisterSteps.GoToSecondForm" class="panelRegister__stepTwo">
-      <div class="panelDodajAutobus__dataLoader__text">
-        <p class="panelDodajAutobus__navigation__item">Na twój email przyszedł własnie link aktywacyjny.</p>
-      </div>
+      <form name="form" ng-controller="RegisterStepTwoController" ng-submit="form.$valid &amp;&amp; RegisterToken()" novalidate="novalidate" class="panelRegister__form">
+        <div ng-hide="sendForm" class="panelRegister__formwraps">
+          <div class="panelRegister__formwrapper">
+            <input placeholder="E-mail" ng-model="Email" required="required" name="uEmail" type="email"/><i class="fa fa-envelope-o"></i>
+          </div>
+          <div class="panelRegister__formwrapper">
+            <input placeholder="HasÅ‚o" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
+          </div>
+          <div class="panelRegister__formwrapper">
+            <input placeholder="Token" ng-model="Token" required="required" name="uToken" type="text"/><i class="fa fa-lock"></i>
+          </div>
+          <button>Aktywuj</button>
+        </div>
+        <div ng-hide="sendForm" class="panelRegister__navigation">Masz juÅ¼ konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj siÄ™.</a></div>
+        <div ng-show="sendForm" class="panelDodajAutobus__dataLoader">
+          <div ng-hide="CallbackServera" class="panelDodajAutobus__dataLoader__svg">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 80 80" xml:space="preserve">
+              <path fill="#00aef0" d="M10,40c0,0,0-0.4,0-1.1c0-0.3,0-0.8,0-1.3c0-0.3,0-0.5,0-0.8c0-0.3,0.1-0.6,0.1-0.9c0.1-0.6,0.1-1.4,0.2-2.1                        c0.2-0.8,0.3-1.6,0.5-2.5c0.2-0.9,0.6-1.8,0.8-2.8c0.3-1,0.8-1.9,1.2-3c0.5-1,1.1-2,1.7-3.1c0.7-1,1.4-2.1,2.2-3.1                        c1.6-2.1,3.7-3.9,6-5.6c2.3-1.7,5-3,7.9-4.1c0.7-0.2,1.5-0.4,2.2-0.7c0.7-0.3,1.5-0.3,2.3-0.5c0.8-0.2,1.5-0.3,2.3-0.4l1.2-0.1                        l0.6-0.1l0.3,0l0.1,0l0.1,0l0,0c0.1,0-0.1,0,0.1,0c1.5,0,2.9-0.1,4.5,0.2c0.8,0.1,1.6,0.1,2.4,0.3c0.8,0.2,1.5,0.3,2.3,0.5                        c3,0.8,5.9,2,8.5,3.6c2.6,1.6,4.9,3.4,6.8,5.4c1,1,1.8,2.1,2.7,3.1c0.8,1.1,1.5,2.1,2.1,3.2c0.6,1.1,1.2,2.1,1.6,3.1                        c0.4,1,0.9,2,1.2,3c0.3,1,0.6,1.9,0.8,2.7c0.2,0.9,0.3,1.6,0.5,2.4c0.1,0.4,0.1,0.7,0.2,1c0,0.3,0.1,0.6,0.1,0.9                        c0.1,0.6,0.1,1,0.1,1.4C74,39.6,74,40,74,40c0.2,2.2-1.5,4.1-3.7,4.3s-4.1-1.5-4.3-3.7c0-0.1,0-0.2,0-0.3l0-0.4c0,0,0-0.3,0-0.9                        c0-0.3,0-0.7,0-1.1c0-0.2,0-0.5,0-0.7c0-0.2-0.1-0.5-0.1-0.8c-0.1-0.6-0.1-1.2-0.2-1.9c-0.1-0.7-0.3-1.4-0.4-2.2                        c-0.2-0.8-0.5-1.6-0.7-2.4c-0.3-0.8-0.7-1.7-1.1-2.6c-0.5-0.9-0.9-1.8-1.5-2.7c-0.6-0.9-1.2-1.8-1.9-2.7c-1.4-1.8-3.2-3.4-5.2-4.9                        c-2-1.5-4.4-2.7-6.9-3.6c-0.6-0.2-1.3-0.4-1.9-0.6c-0.7-0.2-1.3-0.3-1.9-0.4c-1.2-0.3-2.8-0.4-4.2-0.5l-2,0c-0.7,0-1.4,0.1-2.1,0.1                        c-0.7,0.1-1.4,0.1-2,0.3c-0.7,0.1-1.3,0.3-2,0.4c-2.6,0.7-5.2,1.7-7.5,3.1c-2.2,1.4-4.3,2.9-6,4.7c-0.9,0.8-1.6,1.8-2.4,2.7                        c-0.7,0.9-1.3,1.9-1.9,2.8c-0.5,1-1,1.9-1.4,2.8c-0.4,0.9-0.8,1.8-1,2.6c-0.3,0.9-0.5,1.6-0.7,2.4c-0.2,0.7-0.3,1.4-0.4,2.1                        c-0.1,0.3-0.1,0.6-0.2,0.9c0,0.3-0.1,0.6-0.1,0.8c0,0.5-0.1,0.9-0.1,1.3C10,39.6,10,40,10,40z">
+                <animatetransform attributetype="xml" attributename="transform" type="rotate" from="0 40 40" to="360 40 40" dur="0.6s" repeatcount="indefinite"></animatetransform>
+              </path>
+            </svg>
+          </div>
+        </div>
+        <div class="panelDodajAutobus__dataLoader__text">
+          <p ng-hide="CallbackServera">{{ message }}</p><a href="/#/login" ng-show="messageToken">{{ messageToken }}</a><a href="/#/register" ng-show="messageTokenError" class="panelDodajAutobus__navigation__item red">{{ messageTokenError }}</a>
+        </div>
+      </form>
     </div>
   </div>
 </div>
