Panel rejestracji i logowania i wylogowywania :D

--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -28,7 +28,7 @@
           <div ng-show="form.$submitted || form.uLat.$touched" class="row"><span ng-show="form.uLat.$error.required" class="error-info">Prosze podać współrzędne!</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lng</span>
-          <input placeholder="Lng" type="number" ng-model="Lng" required="required" name="uLng"/>
+          <input placeholder="Lng" ng-model="Lng" required="required" name="uLng"/>
           <div ng-show="form.$submitted || form.uLng.$touched" class="row"><span ng-show="form.uLng.$error.required" class="error-info">Prosze podać współrzędne!</span></div>
         </div>
         <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
