markery okienko informacyjne kosmetyka

--- a/app/index.html
+++ b/app/index.html
@@ -99,9 +99,9 @@
         <div id="googleMaps" class="googleMaps__API">
           <ng-map center="[{{lat}}, {{lng}}]" zoom="14" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]" pan-control="false" map-type-control="true" map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}" zoom-control="true" zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}" street-view-control="false" scale-control="false">
             <info-window id="myInfoWindow">
-              <div ng-non-bindable class="row">
+              <div ng-non-bindable class="googleMaps__API__infoWindow">
                 <h4>{{selectedBusstop.Name}}</h4>
-                <table class="flex-table">
+                <table>
                   <tr>
                     <td>Ulica</td>
                     <td>{{selectedBusstop.LocalizationString}}</td>
